server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bookserver
  namespace: default 
spec:
  containers:
    - name: bookserver
      image: pgautam27/bookserver:v2
      ports:
        - containerPort: 3000
