service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookserver
  namespace: default
spec:
  type: NodePort
  selector:
    app: bookserver
  ports:
    - port: 80          
      targetPort: 3000    
      nodePort: 30001
